Ensure search field UI isn't covered by the date selector
https://github.com/Fliplet/fliplet-studio/issues/5707

--- a/css/layout-css/agenda-style.upload.css
+++ b/css/layout-css/agenda-style.upload.css
@@ -367,7 +367,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  z-index: 9;
+  z-index: 10;
 }
 
 .fl-with-top-menu .new-agenda-list-container .section-top-wrapper {
